Fix: Title Too Big in Card

--- a/src/components/portfolio card/PortfolioCard.css
+++ b/src/components/portfolio card/PortfolioCard.css
@@ -251,7 +251,7 @@
   .portfolio-text h3 {
     height: 18px;
     max-width: 132px;
-    font-size: 16px; /* 60% of 24px */
+    font-size: 12px; /* 60% of 24px */
     margin: 0 0 6px; /* 60% of 10px */
   }
 
